# BankSys

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  transactions.csv  xtra.txt
.github/workflows/: codeql.yml
Old html files/: account2.html  index2.html  login2.html
main/: __init__.py  admin.py  analyse.py  analysis.py  gen.py  models.py  urls.py  views.py
server/: settings.py  urls.py
static/: account.js  bank.js  friends.js  index.js  style.css  tz.js
templates/: base.html  error.html
templates/main/: account.html  analysis.html  index.html  login.html  logout.html  main.html  redirect.html  signup.html  transaction.html  transactions.html  tz.html
